# Combine

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.org
cmake/: combineVersion.cmake
combine/: affix.hpp  apply.hpp  base_types.hpp  combine.hpp  composite.hpp  config.hpp.in  cons.hpp  context.hpp  count.hpp  datum.hpp  driver.hpp  either.hpp  error_signal.hpp  exception_handler.hpp  fold.hpp  funcall.hpp  get.hpp  idx.hpp  import.hpp  infix_operator_list.def  length.hpp  list.hpp  macro_tools.hpp  make.hpp  maybe.hpp  mdarray.hpp  meta_kanren.hpp  multiple_value.hpp  nil.hpp  nth.hpp  operator.hpp  partial.hpp  pow.hpp  property.hpp  select_with_sizeof.hpp  simple.hpp  symbol.hpp  traits.hpp  transpose.hpp  type.hpp
combine/cmake/: simple_test.cmake
doc/html/: annotated.html  classes.html  count_8hpp.html  count_8hpp__dep__incl.map  count_8hpp__dep__incl.md5  count_8hpp__incl.map  count_8hpp__incl.md5  count_8hpp_source.html  count__test_8cpp.html  count__test_8cpp__incl.map  count__test_8cpp__incl.md5  count__test_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  count__test_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_d4987db5d984f93259922a241c825c17.html  dir_d4987db5d984f93259922a241c825c17_dep.map  dir_d4987db5d984f93259922a241c825c17_dep.md5  doxygen.css  easy__test_8cpp.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  idx_8hpp.html  idx_8hpp_source.html  index.html  macro__tools_8hpp.html  macro__tools_8hpp__dep__incl.map  macro__tools_8hpp__dep__incl.md5  macro__tools_8hpp_source.html  namespace_combine.html  namespace_combine_a076d4ca1c2f5357edecc351d84b2aa4e_icgraph.map  namespace_combine_a076d4ca1c2f5357edecc351d84b2aa4e_icgraph.md5  (+17 more)
doc/html/search/: all_63.js  all_65.js  all_67.js  all_6d.js  all_6e.js  all_74.js  classes_63.js  classes_67.js  classes_6e.js  classes_74.js  defines_61.js  defines_63.js  files_63.js  files_69.js  files_6d.js  files_6e.js  functions_63.js  functions_67.js  functions_6d.js  functions_6f.js  namespaces_63.js  search.js  variables_76.js
doc/man/man3/: Combine.3  Combine_Count_types_ X, Xs... _.3  Combine_Count_types__.3  Combine_Nth.3  Combine_Nth_ 0, X, Xs... _.3  Combine_Type.3  Gen_Idx_ 0, inidices... _.3  Gen_Idx_ n, indices... _.3  _home_sbj_Sandbox_Combine_combine_.3  _home_sbj_Sandbox_Combine_test_.3  count.hpp.3  count_test.cpp.3  easy_test.cpp.3  idx.hpp.3  macro_tools.hpp.3  nth.hpp.3  type.hpp.3
test/: affix_test.cpp  apply_test.cpp  base_types_test.cpp  composite_test.cpp  cons_test.cpp  count_test.cpp  datum_test.cpp  driver_test.cpp  either_test.cpp  exception_handler_test.cpp  fold_test.cpp  funcall_test.cpp  get_test.cpp  idx_test.cpp  length_test.cpp  list_test.cpp  make_test.cpp  maybe_test.cpp  mdarray_test.cpp  meta_kanren_test.cpp  multiple_value_test.cpp  nth_test.cpp  operator_test.cpp  pow_test.cpp  property_test.cpp  simple_test.cpp  traits_test.cpp  transpose_test.cpp
